<resources>
    <string name="app_name">Explore</string>

    <string name="dialog_about_title">About</string>
    <string name="about_text">
        Explore is application map and location base, you can search, view, find, navigate and save place around you.
    </string>

    <string name="publisher_id">pub-0000000000000000</string>
    <string name="privacy_policy_url">

    </string>

    <!-- Replace with your admob app id-->
    <string name="admob_app_id">ca-app-pub-5099438602515379~9575640919</string>

    <!-- Replace with your own banner ad unit id. -->
    <string name="banner_ad_unit_id">ca-app-pub-5099438602515379~9575640919</string>

    <!-- Replace with your own interstitial ad unit id. -->
    <string name="interstitial_ad_unit_id">ca-app-pub-5099438602515379~9575640919</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyBqrvss-_OmBz6LhSvQ31Uxauaz5_pRuxM
    </string>

    <string name="title_activity_activity_maps">Map</string>
    <string name="title_activity_main">ActivityMain</string>
    <string name="title_activity_setting">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--fragment around-->
    <string name="radio_around_simple">SIMPLE</string>
    <string name="radio_around_all">ALL</string>

    <!--fragment direction-->
    <string name="msg_no_route">No route between this place</string>
    <string name="hint_origin">Search origin</string>
    <string name="hint_destination">Search destination</string>
    <string name="current_location">Current Location</string>
    <string name="window_origin">Origin</string>
    <string name="window_destination">Destination</string>
    <string name="via">Via</string>

    <!--fragment favorites-->
    <string name="no_item">No Item</string>

    <!--fragment find-->
    <string name="hint_search">Search place</string>

    <!--activity place detail-->
    <string name="add_to_favorite">Place add to favorites</string>
    <string name="remove_from_favorite">Place remove from favorites</string>

    <!--activity setting-->
    <string name="around_me_radius">Around Me Radius</string>
    <string name="rate_this_app">Rate This App</string>
    <string name="build_version">Build Version</string>
    <string name="about">About</string>
    <string name="kilometer">Kilometer</string>
    <string name="term_condition">Term &amp; Policies</string>
    <string name="version">Version</string>
    <string name="unknown">Unknown</string>

    <!-- Nav Drawer Menu Items -->
    <string name="str_nav_find">Find Place</string>
    <string name="str_nav_direction">Direction</string>
    <string name="str_nav_around_me">Around Me</string>
    <string name="str_nav_favorites">Favorites</string>
    <string name="str_nav_setting">Settings</string>
    <string name="str_nav_rate">Rate</string>
    <string name="str_nav_more_apps">More Apps</string>
    <string name="str_nav_about">About</string>
    <string name="sub_title_nav_others">Others</string>

    <string name="action_settings">Settings</string>
    <string name="action_rate">Rate This App</string>
    <string name="action_about">About</string>

    <string name="no_phone">No Phone Number</string>
    <string name="no_website">No Website</string>
    <string name="no_internet">No internet connection</string>

    <string name="dialog_content_gps">
        GPS is disabled in your device.
        \nWould you like to enable it?
    </string>

    <!-- Menu String -->
    <string name="str_menu_normal">Normal</string>
    <string name="str_menu_satellite">Satellite</string>
    <string name="str_menu_hybrid">Hybrid</string>
    <string name="str_menu_terrain">Terrain</string>

    <string name="content_term">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dolor risus, aliquet a erat quis, viverra molestie orci. Suspendisse vehicula porta libero. Nam tincidunt nulla ipsum, vel iaculis risus scelerisque sed. Phasellus venenatis, enim vel placerat blandit, leo eros bibendum erat, at auctor mauris diam ac risus. Aenean sit amet congue neque, sit amet condimentum elit. Fusce lacinia massa vel nisl scelerisque, in scelerisque dolor elementum. Vivamus leo enim, congue dictum congue vitae, porttitor id purus. Sed eu ultricies erat. Morbi hendrerit, mi ac volutpat commodo, magna turpis pretium nibh, at fringilla eros lorem quis tellus. Praesent porttitor purus nibh, ac vestibulum massa fringilla vel. Pellentesque dapibus nulla quis luctus dictum. In scelerisque ut ex sed facilisis. Nunc eu finibus nulla, ut hendrerit sem. Suspendisse accumsan risus vel diam fringilla iaculis.
        \n\nQuisque facilisis finibus aliquam. Sed mattis, dui fringilla ornare finibus, orci odio blandit risus, ut maximus dui odio non leo. Donec laoreet lacus nisi, a mollis velit suscipit ac. Quisque faucibus ut nisl in congue. Nam sagittis consectetur tempus. Suspendisse eget posuere dui. Donec ultricies velit ex, vel cursus odio sollicitudin in. Nullam faucibus auctor ligula, eu rhoncus dui facilisis a. Curabitur vel feugiat est. Quisque congue at enim eleifend ultrices. Proin dapibus risus lorem, nec condimentum nunc consequat vitae. Quisque sapien lorem, vestibulum vitae justo eget, fringilla eleifend nisi.
        \n\nMauris ultricies augue sit amet est sollicitudin laoreet. Fusce ut congue felis. Fusce dictum tristique elit nec iaculis. Mauris sodales tempus fringilla. Fusce nec nunc tempus, tempor sapien sit amet, ultricies erat. Mauris ultrices ac lorem ultrices facilisis. Nam pharetra, nisi a imperdiet interdum, nunc justo ultricies nisl, a laoreet massa dui vel enim. Pellentesque et magna ac tellus ullamcorper malesuada a ac nisl. Curabitur id est et neque convallis accumsan. Aliquam eleifend varius massa. Curabitur eu finibus tortor.
        \n\nVivamus aliquam nisl rutrum orci volutpat porta in ornare est. Quisque ligula ipsum, vulputate id aliquam vitae, semper vitae orci. Nam non pulvinar ligula, eget tincidunt ante. Quisque sapien massa, varius tempus pretium id, vehicula at magna. Ut ut ultrices augue. Nam nec ullamcorper tellus, at finibus lectus. Fusce vel iaculis mauris, id porta nulla. Aenean ac mollis sapien. Morbi imperdiet augue tempus nulla luctus, sit amet feugiat purus elementum.
    </string>

    <string name="dialog_title_permission">Permission confirmation</string>
    <string name="dialog_content_permission">
        To enable all the features of this application you need to grant required permissions.
        \nDo you want to go to the settings menu?
    </string>

    <string name="dialog_title_denied">Permission denied</string>
    <string name="dialog_content_permission_location">
        You need to grant LOCATION permissions to access this feature.
        \nDo you want to go to the settings menu?
    </string>

    <string name="max_radius_message">
        Maximum radius is 50 Kilometer
    </string>

    <!--exit notification-->
    <string name="press_again_exit_app">Press again to exit</string>

    <string name="error_get_location">Cannot get current location.</string>

    <string name="OK">OK</string>
    <string name="SETTING">SETTING</string>
    <string name="CANCEL">CANCEL</string>
    <string name="SAVE">SAVE</string>
    <string name="DISMISS">DISMISS</string>
    <string name="HIDE">HIDE</string>
    <string name="RETRY">RETRY</string>
    <string name="DETAILS">DETAILS</string>
    <string name="FAILED">FAILED</string>
    <string name="TYPE_SEARCH">SEARCH</string>
    <string name="NO_IMAGE">NO IMAGE</string>

</resources>
