<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="@dimen/spacing_large"
    android:orientation="vertical"
    android:weightSum="1">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:minHeight="@dimen/spacing_xlarge"
        android:text="@string/around_me_radius"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:id="@+id/et_radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:inputType="number"
            android:maxLength="2">

            <requestFocus />

        </EditText>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginLeft="@dimen/spacing_large"
            android:text="@string/kilometer" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right|end">

        <Button
            android:id="@+id/button_no"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/CANCEL" />

        <Button
            android:id="@+id/button_ok"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/SAVE" />
    </LinearLayout>

</LinearLayout>